@@ -5,27 +5,32 @@ import com.vaadin.flow.component.orderedlayout.VerticalLayout;
 import com.vaadin.flow.spring.annotation.SpringComponent;
 import com.vaadin.flow.spring.annotation.UIScope;
 import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.ost.advertisement.dto.filter.UserFilterDto;
 import org.ost.advertisement.entities.User;
+import org.ost.advertisement.dto.UserSettings;
+import org.ost.advertisement.events.SettingsChangedEvent;
 import org.ost.advertisement.services.I18nService;
 import org.ost.advertisement.services.UserService;
 import org.ost.advertisement.ui.views.components.PaginationBarModern;
+import org.ost.advertisement.ui.views.support.SettingsPaginationSupport;
 import org.ost.advertisement.ui.views.components.dialogs.ConfirmActionDialog;
 import org.ost.advertisement.ui.views.components.query.QueryBlock;
 import org.ost.advertisement.ui.views.components.query.QueryStatusBar;
 import org.ost.advertisement.ui.views.main.tabs.users.overlay.UserOverlay;
 import org.ost.advertisement.ui.views.services.NotificationService;
+import org.springframework.context.ApplicationListener;
+import org.springframework.context.event.ApplicationEventMulticaster;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static org.ost.advertisement.constants.I18nKey.*;
+import static org.ost.advertisement.common.I18nKey.*;
 
 @Slf4j
 @SpringComponent
@@ -33,15 +38,20 @@ import static org.ost.advertisement.constants.I18nKey.*;
 @RequiredArgsConstructor
 public class UserView extends VerticalLayout {
 
-    private final transient UserService userService;
-    private final transient I18nService i18n;
-    private final transient NotificationService notificationService;
-    private final QueryStatusBar<UserFilterDto> queryStatusBar;
+    private final transient UserService                  userService;
+    private final transient SettingsPaginationSupport    settingsPaginationSupport;
+    private final transient I18nService                  i18n;
+    private final transient NotificationService          notificationService;
+    private final QueryStatusBar<UserFilterDto>          queryStatusBar;
     private final transient UserGridConfigurator.Builder gridConfiguratorBuilder;
-    private final UserOverlay overlay;
-    private final transient ConfirmActionDialog.Builder confirmActionDialogBuilder;
+    private final UserOverlay                            overlay;
+    private final transient ConfirmActionDialog.Builder  confirmActionDialogBuilder;
 
-    private Grid<User> grid;
+    private final ApplicationEventMulticaster            eventMulticaster;
+
+    private ApplicationListener<SettingsChangedEvent> settingsListener;
+
+    private Grid<User>          grid;
     private PaginationBarModern paginationBar;
 
     @PostConstruct
@@ -66,7 +76,21 @@ public class UserView extends VerticalLayout {
         addComponentAsFirst(queryStatusBar);
         addComponentAtIndex(1, queryStatusBar.getQueryBlock());
 
+        settingsListener = event -> settingsPaginationSupport
+                .handleSettingsChanged(event, paginationBar, UserSettings::getUsersPageSize, this::refreshGrid);
+        eventMulticaster.addApplicationListener(settingsListener);
+
+        applySettingsOnInit();
         refreshGrid();
+    }
+
+    @PreDestroy
+    public void destroy() {
+        eventMulticaster.removeApplicationListener(settingsListener);
+    }
+
+    private void applySettingsOnInit() {
+        settingsPaginationSupport.applyOnInit(paginationBar, UserSettings::getUsersPageSize);
     }
 
     private void initPagination() {
@@ -100,19 +124,19 @@ public class UserView extends VerticalLayout {
         var sort = queryBlock.getSortProcessor().getOriginalSort().getSort();
 
         try {
-            List<User> pageData = userService.getFiltered(currentFilter, page, size, sort);
-            int totalCount = userService.count(currentFilter);
+            List<User> pageData   = userService.getFiltered(currentFilter, page, size, sort);
+            int        totalCount = userService.count(currentFilter);
             paginationBar.setTotalCount(totalCount);
-            grid.setItems(pageData != null ? pageData : Collections.emptyList());
+            grid.setItems(pageData);
         } catch (ConstraintViolationException ex) {
             log.warn("Validation error while fetching users: {}", ex.getMessage(), ex);
             showValidationErrors(ex);
-            grid.setItems(Collections.emptyList());
+            grid.setItems(List.of());
             paginationBar.setTotalCount(0);
         } catch (Exception ex) {
             log.error("Unexpected error while refreshing user grid", ex);
             notificationService.error(USER_VIEW_NOTIFICATION_DELETE_ERROR, ex.getMessage());
-            grid.setItems(Collections.emptyList());
+            grid.setItems(List.of());
             paginationBar.setTotalCount(0);
         } finally {
             queryStatusBar.update();
